is turned on. The case for this is when Bricolage is running behind a reverse
proxy server that's handling SSL mappsings. Thanks to Alex Krohn for the
report. [David]

=item *

Added the "object" format for datetime values. Pass "object" as the formatting
string and a L<DateTime> object will be returned, rather than a string.
[David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a bug in the L<Bric::Util::ApacheReq> tests where they would fail if the
C<LISTEN_PORT> or C<SSL_PORT> F<bricolage.conf> directives were anything other
than 80 and 443, respectively. Thanks to Héctor Daniel Cortés González for the
report. [David]

=item *

The "Checkout" link no longer appears on desk items for users who do not have
permission to edit an asset [Kahil Jallad].

=item *

Fixed a bug where the SFTP mover would not properly finish moving the file,
leavingescaped tmp files on the destination server. [Matt Rolf]

=back

=head1 Version 2.0.0 (2010-04-12)

=head2 Bug Fixes

=over

=item *

Fixed error handling in the access handler so that it works when a URI is a
directory. Thanks to Dave Rolsky for the initial patch. [David]

=item *

Updated session error handling to recognize a different error message in
recent versions of Apache::Session. [Dave Rolsky]

=item *

The buttons once again work in the category browser when the
C<ENABLE_CATEGORY_BROWSER> F<bricolage.conf> directive is true. Thanks to
Krzysztof Rudnik for the report (Bug #155). [David]

=item *

Fixed subtle category autocomplete issue where it can be difficult to choose
the root category. It would appear to work, but the "Unable to add category
that does not exist" message would not clear and the form would think that the
category isn't legal. Could apply to other categories, but was most common for
the root category. Thanks to Michael Herring for the detailed steps to
reproduce (Bug #157). [David]

=item *

Fixed bug where custom fields in the contributor profile did not appear in